# Flask_GPT3.5

./: .gitignore  README.md  app.py  pyproject.toml
static/src/css/: input.css
templates/: index.html
